--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://melissawinstanley.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  mwinstanley
-
+linkedin_username: melissawinstanley
 # Build settings
 theme: minima
 plugins:
